packages/backend/backend-final.log
file:///home/robbie/development/dat-bitch-cartrita/packages/backend/src/system/EnhancedOpenTelemetryService.js:21
import { trace, metrics, logs, context, SpanKind, SpanStatusCode } from '@opentelemetry/api';
                         ^^^^
SyntaxError: Named export 'logs' not found. The requested module '@opentelemetry/api' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from '@opentelemetry/api';
const { trace, metrics, logs, context, SpanKind, SpanStatusCode } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.1
